<resources>
    <string name="app_name">kindergarten</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="login">התחבר</string>
    <string name="profile_page">פרופיל אישי</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_greeting">שלום, s%</string>
    <string name="working_arrangement">סידור עבודה</string>
    <string name="calendar">לוח שנה</string>
    <string name="daily_schedule">לוח זמנים יומי </string>
    <string name="daily_summary">סיכום יומי</string>
    <string name="messages">הודעות</string>
    <string name="admin_panel">מערכת ניהול</string>
    <string name="employee_panel">מערכת עובדים</string>
    <string name="user_panel">מסך הבית</string>
    <string name="home_page">ראשי</string>
    <string name="settings">הגדרות</string>
    <string name="user_message_page">הודעות הורים</string>
    <string name="user_daily_schedule">סיכום יומי</string>
    <string name="from">:מאת</string>
    <string name="subject">:נושא</string>
    <string name="new_event">New Event</string>
    <string name="home">בית</string>
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 245b0f4a46aa12e4e37f28a11096247b7d8f7e6b
    <string name="date_format">%s/%s/%s</string>

    <!--<string name="events">אירועים  -  </string>-->
    <!--<string name="worker1">עובד1</string>-->
    <!--<string name="add_hours">שבץ</string>-->
    <!--<string name="prev_week">שבוע שעבר</string>-->
    <!--<string name="next_week">שבוע הבא</string>-->
    <!--<string name="Work_Arrangement">שיבוץ עובדים</string>-->
    <!--<string name="worker">עובד</string>-->
    <!--<string name="sunday">ראשון</string>-->
    <!--<string name="monday">שני</string>-->
    <!--<string name="tuesday">שלישי</string>-->
    <!--<string name="wednsday">רביעי</string>-->
    <!--<string name="thirsday">חמישי</string>-->
    <!--<string name="friday">שישי</string>-->
    <!--<string name="garden">גן ילדים</string>-->
    <!--<string name="add">הוספה</string>-->
    <!--<string name="Workers_names">שמות העובדים</string>-->
    <!--<string name="dateOfthisweek">תאריך של תחילת שבוע זה</string>-->

    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="add_event">הוסף אירוע</string>
    <string name="default_hour_format">00:00</string>
    <string name="add_description">הוסף תיאור</string>
    <string name="cancel">ביטול</string>
    <string name="save">שמירה</string>
    <string name="password_error">הסיסמה חייבת להיות בין %1$d&#8211;%2$d תווים</string>
    <string name="username_error">שם משתמש צריך להיות בין %1$d&#8211;%2$d תווים</string>
    <string name="user_not_logged_in">משתמש אינו מחובר</string>

    <string name="new_message">הודעה חדשה</string>
    <string name="employee_presence">נוכחות עובדים</string>
    <string name="children_presence">נוכחות ילדים</string>
    <!--<string name="try_again">תנסה עוד פעם</string>-->
    <!--<string name="pictures">תמנות</string>-->
    <!--<string name="add_event_description_title">הוספת תיאור</string>-->

<<<<<<< HEAD
=======
    <string name="date_format">%s%s%s</string>
    <string name="add_event">הוסף תיאור ארוע</string>
=======
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">אירעה תקלה, אנא נסו שוב</string>
    <string name="event_added_to_calendar">האירוע %s נוסף ללוח השנה בהצלחה</string>
    <string name="add_event_description_title">תיאור האירוע</string>
    <string name="date">תאריך</string>
    <string name="error_adding_event">אירעה תקלה בהוספת האירוע, אנא נסה שוב</string>

>>>>>>> 245b0f4a46aa12e4e37f28a11096247b7d8f7e6b
    <string name="see_event_description">תיאור הארוע</string>
    <string name="pictures">תמונות</string>

    <string name="worker1">עובד1</string>
    <string name="add_hours">שבץ</string>
    <string name="prev_week">שבוע שעבר</string>
    <string name="next_week">שבוע הבא</string>
    <string name="Work_Arrangement">שיבוץ עובדים</string>
    <string name="worker">עובד</string>
    <string name="sunday">ראשון</string>
    <string name="monday">שני</string>
    <string name="tuesday">שלישי</string>
    <string name="wednsday">רביעי</string>
    <string name="thirsday">חמישי</string>
    <string name="friday">שישי</string>
    <string name="garden">גן ילדים</string>
    <string name="add" >הוספה</string>
    <string name="Worker_name">שם עובד</string>
    <string name= "dateOfthisweek">תאריך של תחילת שבוע זה</string>
    <string name= "shift1">משמרת 1</string>
    <string name= "shift2">משמרת 2</string>
    <string name="Cancel">ביטול</string>
    <string name="OK">אישור</string>
    <string name="ArrangeWorker">שיבוץ עובד</string>
    <string name="chooseShift">בחירת משמרת</string>
    <string name="chooseDay">בחירת יום מהשבוע</string>
    <string name="chooseWorker">בחירת עובד</string>
    <string name="edit_arrang">עריכת עובד</string>
    <string name="workerName">שם עובד</string>
    <string name="day">יום</string>
    <string name="From">משעה</string>
    <string name="To">עד שעה</string>
    <string name="back">חזרה</string>
    <string name="begin_day">יום התחלה</string>
    <string name="end_day">יום סיום</string>
<<<<<<< HEAD
>>>>>>> e81bfae22f1fbe1e11a2946e23717012b6a7f3c0
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">אירעה תקלה, אנא נסו שוב</string>
    <string name="event_added_to_calendar">האירוע %s נוסף ללוח השנה בהצלחה</string>
    <string name="add_event_description_title">תיאור האירוע</string>
    <string name="date">תאריך</string>
    <string name="error_adding_event">אירעה תקלה בהוספת האירוע, אנא נסה שוב</string>

    <string name="see_event_description">תיאור הארוע</string>
    <string name="pictures">תמונות</string>

    <string name="worker1">עובד1</string>
    <string name="add_hours">שבץ</string>
    <string name="prev_week">שבוע שעבר</string>
    <string name="next_week">שבוע הבא</string>
    <string name="Work_Arrangement">שיבוץ עובדים</string>
    <string name="worker">עובד</string>
    <string name="sunday">ראשון</string>
    <string name="monday">שני</string>
    <string name="tuesday">שלישי</string>
    <string name="wednsday">רביעי</string>
    <string name="thirsday">חמישי</string>
    <string name="friday">שישי</string>
    <string name="garden">גן ילדים</string>
    <string name="add" >הוספה</string>
    <string name="Worker_name">שם עובד</string>
    <string name= "dateOfthisweek">תאריך של תחילת שבוע זה</string>
    <string name= "shift1">משמרת 1</string>
    <string name= "shift2">משמרת 2</string>
    <string name="Cancel">ביטול</string>
    <string name="OK">אישור</string>
    <string name="ArrangeWorker">שיבוץ עובד</string>
    <string name="chooseShift">בחירת משמרת</string>
    <string name="chooseDay">בחירת יום מהשבוע</string>
    <string name="chooseWorker">בחירת עובד</string>
    <string name="edit_arrang">עריכת עובד</string>
    <string name="workerName">שם עובד</string>
    <string name="day">יום</string>
    <string name="From">משעה</string>
    <string name="To">עד שעה</string>
    <string name="back">חזרה</string>
    <string name="begin_day">יום התחלה</string>
    <string name="end_day">יום סיום</string>
=======
>>>>>>> 245b0f4a46aa12e4e37f28a11096247b7d8f7e6b
    <string name="events">ארועים -</string>
    <string name="hours">שעות</string>
    <string name="this_month_work_hours">החודש הזה עבדת</string>
    <string name="monthly_work_hours">%d</string>
    <string name="add_title">הוסף כותרת ארוע</string>

<<<<<<< HEAD
<<<<<<< HEAD
=======


>>>>>>> e81bfae22f1fbe1e11a2946e23717012b6a7f3c0
=======
>>>>>>> 245b0f4a46aa12e4e37f28a11096247b7d8f7e6b
</resources>
