<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupUser"
        android:checkableBehavior="single">

        <item
            android:id="@+id/UserDrawerBtnDailySchedule"
            android:checkable="false"
<<<<<<< HEAD
            android:icon="@drawable/ic_home"
            android:title="@string/user_daily_schedule" />
        <item
            android:id="@+id/UserDrawerBtnCalendar"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/calendar" />
        <item
            android:id="@+id/UserDrawerBtnMessage"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/user_message_page" />
=======
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_page" />

        <item
            android:id="@+id/userDailySummary"
            android:checkable="false"
            android:icon="@drawable/ic_menu_daily_summary"
            android:title="@string/daily_summary" />

        <item
            android:id="@+id/userCalendar"
            android:checkable="false"
            android:title="@string/calendar"
            android:icon="@drawable/ic_menu_calendar" />

        <item
            android:id="@+id/userMessages"
            android:checkable="false"
            android:title="@string/messages"
            android:icon="@drawable/ic_menu_message" />

        <item
            android:id="@+id/userSettings"
            android:checkable="false"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />

>>>>>>> 7247ed02b7251ba69c1dd417c13fa5eb7d8dd664
    </group>
</menu>