<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/btnDailyScheduleEmployee"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/daily_schedule" />
        <item
            android:id="@+id/btnCalendarScheduleEmployee"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/calendar" />
        <item
            android:id="@+id/btnWorkScheduleEmployee"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/working_arrangement" />
        <item
            android:id="@+id/btnDailySummary"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/daily_summary" />
        <item
            android:id="@+id/btnMessagesEmployee"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/messages" />
        <item
            android:id="@+id/btnSettings"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/settings" />
    </group>
</menu>