<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="end"
    android:layoutDirection="rtl">
    <group
        android:id="@+id/groupAdmin"
        android:layout_gravity="end"
        android:checkableBehavior="single"
        android:gravity="end">

        <item
            android:id="@+id/dailySummaryMenu"
            android:checkable="false"
            android:icon="@drawable/ic_menu_daily_summary"
            android:title="@string/daily_summary" />

        <item
            android:id="@+id/calendarMenu"
            android:checkable="false"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/messagesMenu"
            android:checkable="false"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/messages" />

    </group>
</menu>