<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/launch_background" />

    <TextView
        android:id="@+id/tvHelloEmployee"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="@string/user_greeting"
        android:textColor="#efefbb"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnWorkSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bluebtn_gradient"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/working_arrangement"
        android:textAllCaps="false"
        android:textColor="#16222A"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDailySummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnnualSchedule" />


    <Button
        android:id="@+id/btnDailySchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bluebtn_gradient"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/daily_schedule"
        android:textAllCaps="false"
        android:textColor="#16222A"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnnualSchedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btnAnnualSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bluebtn_gradient"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/calendar"
        android:textAllCaps="false"
        android:textColor="#16222A"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnWorkSchedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDailySchedule" />


    <Button
        android:id="@+id/btnDailySummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bluebtn_gradient"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="לוח זמנים"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEmployeeMessages"
        app:layout_constraintTop_toBottomOf="@+id/btnWorkSchedule"
        tools:layout_editor_absoluteX="50dp"
        tools:text="@string/daily_summary" />

    <Button
        android:id="@+id/btnEmployeeMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bluebtn_gradient"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/messages"
        android:textAllCaps="false"
        android:textColor="#16222A"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDailySummary" />

</android.support.constraint.ConstraintLayout>