<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#74d7f8"
    tools:layout_editor_absoluteY="25dp">
    <Button
        android:id="@+id/prevweek2"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prev_week"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout1"
        app:layout_constraintVertical_bias="0.783" />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="245dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/Work_Arrangement"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="311dp"
        android:layout_height="383dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">
        <TableRow
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="30"
            android:background="@android:color/holo_blue_dark"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_workers"
                android:layout_width="69dp"
                android:layout_height="45dp"
                android:text="@string/Workers_names"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />
            <HorizontalScrollView
                android:layout_width="117dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>
            <HorizontalScrollView
                android:layout_width="120dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>
        </TableRow>
        <TableRow
            android:id="@+id/sunday_row"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_weight="30"
            android:background="#c3d882">
            <TextView
                android:id="@+id/tv_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tV_add"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tV_add10"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:text="@string/add_hours" />
        </TableRow>
        <TableRow
            android:id="@+id/mon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="#bce3f0">
            <TextView
                android:id="@+id/tv_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_add1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tV_add11"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:text="@string/add_hours" />
        </TableRow>
        <TableRow
            android:id="@+id/tuesday_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="#c3d882">
            <TextView
                android:id="@+id/teusday"
                android:layout_width="74dp"
                android:layout_height="34dp"
                android:text="@string/tuesday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_add2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tV_add12"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:text="@string/add_hours" />
        </TableRow>
        <TableRow
            android:id="@+id/wensday_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="#bce3f0"
            android:gravity="bottom">
            <TextView
                android:id="@+id/wensday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wednsday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_add3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tV_add13"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:text="@string/add_hours" />
        </TableRow>
        <TableRow
            android:id="@+id/thirsday_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="#c3d882">
            <TextView
                android:id="@+id/thirsday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirsday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_add4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tV_add14"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:text="@string/add_hours" />
        </TableRow>
        <TableRow
            android:id="@+id/friday_row"
            android:layout_width="519dp"
            android:layout_height="105dp"
            android:layout_weight="30"
            android:background="#bce3f0">
            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_add5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
            <TextView
                android:id="@+id/tv_add15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hours" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/nextweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_week"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="824dp"
        tools:layout_editor_absoluteY="241dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_week"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout1"
        app:layout_constraintVertical_bias="1.0" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/prevweek2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout1" />
    <EditText
        android:id="@+id/tvDate"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dateOfthisweek"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />
</android.support.constraint.ConstraintLayout>